--- a/index/index.html
+++ b/index/index.html
@@ -20,7 +20,7 @@
         <nav>
             <ul>
                 <li><a href="">inicio</a></li>
-                <li><a href="">contacto</a></li>
+                <li><a href="contacto/contact.html">contacto</a></li>
                 <li><a href="">smartphone</a></li>
                 <li><a href="">noticias</a></li>
                 <li><a href="">blog</a></li>
